<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">TheXTech</string>
    <string name="title_activity_game_settings">Game settings</string>
    <string name="start_game_button">Start game</string>
    <string name="settings_button">Settings</string>
    <string name="game_logo_label">Game logo</string>
    <string name="settings_enable_frameskip">Enable frame skipping</string>
    <string name="setup_disable_sound">Disable sound</string>
    <string name="setup_general_cat">General</string>
    <string name="setup_control_cat">Touchscreen controller</string>
    <string name="setup_display_cat">Display</string>
    <string name="setup_touchscreen_controller_enable">Use touch-screen controller</string>
    <string name="setup_touchscreen_alwaysshow">Show the touchscreen controller on start</string>
    <string name="setup_show_framerate">Show frame-rate value</string>
    <string name="setup_max_framerate_mode">Max frame-rate mode</string>
    <string name="setup_touchscreen_mode">Controller mode</string>
    <string name="setup_sr_speedrunMode">Speed-Run Mode</string>
    <string name="setup_sr_stopwatchSemiTransparent">Make stopwatch being semi-transparent</string>
    <string name="setup_speedrunner">Speed-runner</string>
    <string name="setup_touchpad_style">Controller style</string>
    <string name="managePermExplainTitle">All files access permission is required</string>
    <string name="managePermExplainText">This game uses resources (such as levels, episodes, graphics, music, sounds, configs, etc.) that were placed by the user on the local store directly. This concept allows users to modify and extend the content for their own purposes like that was done at the desktop version of this game. Unfortunately, Android 11+ doesn\'t give the way to grant individual read permission for the specified directory instead of a single file. To run this game you should grand access to all files for the game because of explained reasons.</string>
    <string name="setup_assets_path_label">Change the resources absolute path</string>
    <string name="launcher_no_resources_question">The game requires a resource package for the work. Please download the game resources and unpack them at any convenient directory. Do you want to select an already unpacked folder\?</string>
    <string name="setup_feedback_enable_vibration">Enable vibration</string>
    <string name="setup_feedback_vibration_strength">Vibration strength</string>
    <string name="setup_feedback_vibration_length">Vibration length</string>
    <string name="setup_feedback">Feedback</string>
    <string name="touchscreen_vibration_test_label">Test feedback</string>
    <string name="setup_show_battery_status_label">Device battery status</string>
    <string name="setup_renderer_label">Render system</string>
    <string name="setup_show_controller_state_label">Show a game controller state</string>
    <string name="cheat_dialog_cancel">Cancel</string>
    <string name="cheat_dialog_ok">Run</string>
    <string name="cheat_dialog_title">Type command:</string>
    <string name="launcher_gameSelect_clearList">Clear list</string>
    <string name="launcher_gameSelect_pickTheDir">Select directory...</string>
    <string name="launcher_gameselect_toast_selected">Switched the game: %s</string>
    <string name="launcher_gameselect_toast_listclean">The list of games has been clean.</string>
    <string name="launcher_gameselect_clearlist_title">Clear the games list</string>
    <string name="launcher_gameselect_clearlist_question">Do you really want to clear the list of games?</string>
    <string name="launcher_openfile_indirectly">Can\'t retrieve a direct absolute path for the opened file, and therefore, it was coped into the internal storage of the game. Extra resources (such as custom graphics, music, configs, scripts, etc.) can\'t be loaded. Do you want to start the game in any way\?</string>
</resources>