<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LauncherLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="horizontal"
    tools:context=".Launcher">

    <Button
        android:id="@+id/startGame"
        android:layout_width="127dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginBottom="47dp"
        android:saveEnabled="true"
        android:text="@string/start_game_button" />

    <Button
        android:id="@+id/gameSettings"
        android:layout_width="127dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="225dp"
        android:layout_marginLeft="225dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:layout_marginBottom="47dp"
        android:saveEnabled="true"
        android:text="@string/settings_button" />

    <ImageView
        android:id="@+id/gameLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="160dp"
        android:contentDescription="@string/game_logo_label"
        android:saveEnabled="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/selectGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:clickable="true"
        app:backgroundTint="#FFFFFF"
        app:srcCompat="@android:drawable/ic_menu_add" />

</RelativeLayout>